<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_1_height"
        android:layout_margin="@dimen/layout_margin"
        android:background="@drawable/roundbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/layout1_width"
            android:layout_height="@dimen/image_1_height"
            android:layout_marginTop="@dimen/layout_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.968"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.028"
            app:srcCompat="@drawable/rain" />

        <LinearLayout
            android:layout_width="@dimen/layout1_width"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin"
                android:text="@string/cityname"
                android:textColor="@android:color/white"
                android:textSize="@dimen/layout_2_text_size_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.134"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.051" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/current_temp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/temp_t_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.125"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.033" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="Rainy-Cloudy"
                android:textColor="@android:color/white"
                android:textSize="@dimen/layout_2_text_size_2" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardView"
        android:layout_width="340dp"
        android:layout_height="@dimen/layout_2_height"
        android:layout_marginTop="@dimen/margin_btw_layout"
        android:background="@drawable/backgrnd"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="@dimen/layout_2_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_2_image_height"
                app:srcCompat="@drawable/wind" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layout_2_wind"
                android:textColor="@color/white"
                android:textSize="@dimen/layout_2_text_size_1" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Wind"
                android:textSize="@dimen/layout_2_text_size_2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/layout_2_width"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView33"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_2_image_height"
                app:srcCompat="@drawable/humidity" />

            <TextView
                android:id="@+id/textView99"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layout_2_hum"
                android:textColor="@color/white"
                android:textSize="@dimen/layout_2_text_size_1" />

            <TextView
                android:id="@+id/textView112"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Humidity"
                android:textSize="@dimen/layout_2_text_size_2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/layout_2_width"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView333"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_2_image_height"
                app:srcCompat="@drawable/visibility" />

            <TextView
                android:id="@+id/textView999"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layout_2_visi"
                android:textColor="@color/white"
                android:textSize="@dimen/layout_2_text_size_1" />

            <TextView
                android:id="@+id/textView222"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Visibility"
                android:textSize="@dimen/layout_2_text_size_2" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/day_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="@dimen/day_view_width2"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Day1"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/condition_image_width"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/sun" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="@dimen/text_width_weather"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/sun"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="@dimen/day_view_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/temp1"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/day_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="@dimen/day_view_width2"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Day2"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="@dimen/condition_image_width"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/suncloud" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="@dimen/text_width_weather"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/cloud"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="@dimen/day_view_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/temp2"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/day_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="@dimen/day_view_width2"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Day3"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="@dimen/condition_image_width"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/wind" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="@dimen/text_width_weather"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/windy"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="@dimen/day_view_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/temp3"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/day_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="@dimen/day_view_width2"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Day4"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="@dimen/condition_image_width"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/rain" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="@dimen/text_width_weather"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/rain"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="@dimen/day_view_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/temp1"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/day_height"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="@dimen/day_view_width2"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Day5"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="@dimen/condition_image_width"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/sun" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="@dimen/text_width_weather"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/sun"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="@dimen/day_view_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/temp3"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />
        </LinearLayout><LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/day_height"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="@dimen/day_view_width2"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Day6"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />

            <ImageView
                android:id="@+id/imageView29"
                android:layout_width="@dimen/condition_image_width"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/sun" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="@dimen/text_width_weather"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/sun"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="@dimen/day_view_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/temp1"
                android:textColor="@color/white"
                android:textSize="@dimen/condition_size" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>